--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-theme",
+  "name": "modulo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brock-rasmussen/shopify-theme.git"
+    "url": "git+https://github.com/brock-rasmussen/modulo.git"
   },
   "author": "Brock Rasmussen",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/brock-rasmussen/shopify-theme/issues"
+    "url": "https://github.com/brock-rasmussen/modulo/issues"
   },
-  "homepage": "https://github.com/brock-rasmussen/shopify-theme#readme",
+  "homepage": "https://github.com/brock-rasmussen/modulo#readme",
   "devDependencies": {
     "tailwindcss": "^3.0.24"
   }
